Fixed violations of OpenRewrite recipe: org.openrewrite.java.migrate.util.ListFirstAndLast.